# fluffy-octo-spoon

./: .gitignore  README.md  pyproject.toml
config/: category_mapping.yaml
fluffy_octo_spoon/: dashboard.py  main.py  transaction_classifier.py
